# ML_3ESGI

./: .gitignore  Makefile  pyproject.toml  requirements.txt
TODO/: README.md  TP1_kmeans_acp_TODO.ipynb  TP2_arbre_decision_TODO.ipynb
