[project]
name = "tp-ml-2esgi"
version = "0.1.0"
description = "Travaux pratiques ML 2ESGI : K-means + ACP, arbre de decision, regression lineaire"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "numpy>=2.1",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "matplotlib>=3.9",
]

[dependency-groups]
dev = [
    "ruff>=0.8",
    "jupyterlab>=4.2",
    "ipykernel>=6.29",
    "nbconvert>=7.16",
]

# Projet "virtuel" : pas de build de package, on execute juste des scripts.
[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py313"
# Les notebooks sont du materiel pedagogique : on n'impose pas le style ruff
# (ordre des imports volontairement numpy/pandas/matplotlib, etc.).
# On exclut aussi la venv nommee (uv/pip).
extend-exclude = ["*.ipynb", ".tp_ml_2esgi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
